Adjust side bar (no longer overflows div), begin adding hamburger icon

--- a/static/styles.css
+++ b/static/styles.css
@@ -12,6 +12,11 @@ html, body {
 #search {
 	background-color: green; /* Remove after testing */
 	width: 100%;
+	height: 36px;
+}
+
+input {
+	width: 100%;
 }
 
 #pac-input {
@@ -20,24 +25,28 @@ html, body {
 
 #list {
 	background-color: blue; /* Remove after testing */
-	clear: both;
-	float: left;
+	position: relative;
+	/*clear: both;
+	float: left;*/
 	width: 100%;
-	height: 100%;
+	height: calc(100% - 36px);
+}
+
+ul {
+	margin: 0 0 0 0;
 }
 
 @media only screen and (max-width: 669px) {
 
 	#side-bar {
-		position: absolute;
-		left: -200px;
-		transition: 2s;
+		width: 100%;
+		height: 20%;
 	}
 
 	#map {
 		float: left;
 		width: 100%;
-		height: 100%;
+		height: 80%;
 	}
 
 }
@@ -55,4 +64,18 @@ html, body {
 		width: 85%;
 	    height: 100%;
 	}
+}
+
+#burger-icon {
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	width: 20px;
+	height: 20px;
+}
+
+.burger {
+	width: 100%;
+	height: 5px;
+	background-color: white;
 }
